[gd_scene load_steps=30 format=3 uid="uid://dw7gy7g4p6si5"]

[ext_resource type="Script" path="res://Scripts/Enemies/Slime/Slime.gd" id="1_ciyse"]
[ext_resource type="Texture2D" uid="uid://c5oenc7oqkkht" path="res://Assets/SpriteSheets/Enemies/Enemy1/slime_idle.png" id="2_gbxcx"]
[ext_resource type="Texture2D" uid="uid://dcugmdrdc1s7w" path="res://Assets/SpriteSheets/Enemies/Enemy1/slime_death.png" id="2_xq5g1"]
[ext_resource type="Texture2D" uid="uid://d0ca6jmi17b7o" path="res://Assets/SpriteSheets/Enemies/Enemy1/slime_run.png" id="3_mr4h0"]
[ext_resource type="PackedScene" uid="uid://02bc0nd15e15" path="res://Scenes/Components/HealthComponent.tscn" id="5_8j1kg"]
[ext_resource type="PackedScene" uid="uid://bmsa8b6ps34ch" path="res://Scenes/Components/DetectionComponent.tscn" id="6_rp82x"]
[ext_resource type="PackedScene" uid="uid://bjcpr2cutx8yr" path="res://Scenes/Components/DamageComponent.tscn" id="7_if8wd"]
[ext_resource type="PackedScene" uid="uid://dhyylv0o3byob" path="res://Scenes/Components/EnemyHealthBarComponent.tscn" id="8_i02sl"]
[ext_resource type="PackedScene" uid="uid://c0mklrs6titus" path="res://Scenes/Components/HurtboxComponent.tscn" id="9_f5mlc"]
[ext_resource type="PackedScene" uid="uid://dxql7vhorpddg" path="res://Scenes/Components/VelocityComponent.tscn" id="10_nbhav"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r6p1k"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7ffqb"]
atlas = ExtResource("2_xq5g1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mpvb"]
atlas = ExtResource("2_xq5g1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd1fk"]
atlas = ExtResource("2_xq5g1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_incni"]
atlas = ExtResource("2_xq5g1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkwd8"]
atlas = ExtResource("2_xq5g1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce3to"]
atlas = ExtResource("2_gbxcx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4o62"]
atlas = ExtResource("2_gbxcx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buapf"]
atlas = ExtResource("2_gbxcx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0nma"]
atlas = ExtResource("2_gbxcx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4rlv"]
atlas = ExtResource("3_mr4h0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iu0j"]
atlas = ExtResource("3_mr4h0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb8b0"]
atlas = ExtResource("3_mr4h0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcanu"]
atlas = ExtResource("3_mr4h0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naqkj"]
atlas = ExtResource("3_mr4h0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogtkl"]
atlas = ExtResource("3_mr4h0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtb2p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ffqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mpvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd1fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_incni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkwd8")
}],
"loop": false,
"name": &"slime_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce3to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4o62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buapf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0nma")
}],
"loop": true,
"name": &"slime_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4rlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iu0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb8b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcanu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naqkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogtkl")
}],
"loop": true,
"name": &"slime_run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wcqk7"]
radius = 86.4697

[sub_resource type="CircleShape2D" id="CircleShape2D_dvepp"]
radius = 8.0

[node name="Enemy1" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(1, 0)
script = ExtResource("1_ciyse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_r6p1k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xtb2p")
animation = &"slime_run"

[node name="HealthComponent" parent="." instance=ExtResource("5_8j1kg")]

[node name="DetectionComponent" parent="." instance=ExtResource("6_rp82x")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionComponent"]
shape = SubResource("CircleShape2D_wcqk7")
one_way_collision_margin = 0.0

[node name="DamageComponent" parent="." instance=ExtResource("7_if8wd")]

[node name="EnemyHealthBar" parent="." instance=ExtResource("8_i02sl")]
offset_left = -9.0
offset_top = -11.0
offset_right = 7.0
offset_bottom = -8.0

[node name="HurtboxComponent" parent="." groups=["enemy"] instance=ExtResource("9_f5mlc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" groups=["enemy"]]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_dvepp")

[node name="VelocityComponent" parent="." instance=ExtResource("10_nbhav")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
